2009-07-29  Mike Fenton  <mike.fenton@torchmobile.com>

Reviewed by David Levin.

        Update WebCore/page/ContextMenuController.cpp to conform to WebKit
        Style Guidelines as identified by cpp_style.py.
        https://bugs.webkit.org/show_bug.cgi?id=27613

        * page/ContextMenuController.cpp:
        (WebCore::openNewWindow):
        (WebCore::ContextMenuController::contextMenuItemSelected):

Canonical link: https://commits.webkit.org/38150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46544 268f45cc-cd09-0410-ab3c-d52691b4dbfc